category , MariaDB , and configs added

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,4 @@ commands:
   quiz:
     aliases:
       - "q"
-    description: "command for quiz"
+    description: "do /quiz help for all the commands"
